[gd_scene load_steps=36 format=2]

[ext_resource path="res://scripts/KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://Personajes GGJ2019/protagonist_sheet.png" type="Texture" id=2]
[ext_resource path="res://PressStart2P.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://musica/cancion.ogg" type="AudioStream" id=4]
[ext_resource path="res://Personajes GGJ2019/fader.jpg" type="Texture" id=5]
[ext_resource path="res://scripts/npc.gd" type="Script" id=6]
[ext_resource path="res://Personajes GGJ2019/old_man_v2.png" type="Texture" id=7]
[ext_resource path="res://Personajes GGJ2019/!.png" type="Texture" id=8]
[ext_resource path="res://scripts/npc2.gd" type="Script" id=9]
[ext_resource path="res://Personajes GGJ2019/Bully-sheet.png" type="Texture" id=10]
[ext_resource path="res://scripts/npc3.gd" type="Script" id=11]
[ext_resource path="res://Personajes GGJ2019/Perro_verde_sheet1.png" type="Texture" id=12]
[ext_resource path="res://scripts/npc4.gd" type="Script" id=13]
[ext_resource path="res://Personajes GGJ2019/chica.png" type="Texture" id=14]
[ext_resource path="res://scripts/npc5.gd" type="Script" id=15]
[ext_resource path="res://Personajes GGJ2019/ma'am.png" type="Texture" id=16]
[ext_resource path="res://scripts/FinCasa.gd" type="Script" id=17]
[ext_resource path="res://fondo/se repite.png" type="Texture" id=18]
[ext_resource path="res://scenes/background.tscn" type="PackedScene" id=19]
[ext_resource path="res://imagenes/white.png" type="Texture" id=20]
[ext_resource path="res://imagenes/light_shadow_light.png" type="Texture" id=21]
[ext_resource path="res://imagenes/Black_Left_Arrow.png" type="Texture" id=43]
[ext_resource path="res://imagenes/Black_Up_Arrow.png" type="Texture" id=44]
[ext_resource path="res://imagenes/Black_Right_Arrow.png" type="Texture" id=45]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float radius = 3.0;

void fragment() {
	vec2 uv = SCREEN_UV;
	vec2 surface = vec2(0.5, 0.2);
	vec2 center = surface - vec2(0, radius);
	float base = length(uv - center);
	float height = base - radius;
	float xdiff = (uv.x - surface.x) / base * height;
	uv = clamp(vec2 (uv.x - xdiff, surface.y + height), vec2(0.0, 0.0), vec2(1.0, 1.0));
	COLOR.rgb = textureLod(SCREEN_TEXTURE, uv, 0.0).rgb;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/radius = 2.0

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 0 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 218.402

[sub_resource type="DynamicFont" id=6]
size = 14
use_mipmaps = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 14
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 14
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 127.345, 28.004 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 54.4719, 106.63 )

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath("Cavas_day_nigth:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.956863, 0.898039, 0.898039, 1 ), Color( 0.113725, 0.0862745, 0.0862745, 1 ) ]
}

[node name="World" type="Node2D"]

[node name="TimeFade" type="Timer" parent="."]
wait_time = 25.0

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 396.592, -327.894 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="player"]
material = SubResource( 2 )
margin_left = -864.567
margin_top = -798.305
margin_right = -800.567
margin_bottom = -734.305
rect_scale = Vector2( 30, 22 )
texture = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="player"]
position = Vector2( -163.289, -6.13867 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
hframes = 5

[node name="Anim_pj" type="AnimationPlayer" parent="player/Sprite"]
anims/idle = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2( -184.229, -49.4984 )
scale = Vector2( 0.536291, 0.986044 )
shape = SubResource( 5 )

[node name="Opcion2" type="Label" parent="player"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -63.0
margin_top = -176.329
margin_right = 86.0
margin_bottom = -118.329
rect_scale = Vector2( 1.3, 1.3 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
uppercase = true

[node name="Opcion1" type="Label" parent="player"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -370.873
margin_top = -165.202
margin_right = -233.873
margin_bottom = -107.202
rect_scale = Vector2( 1.3, 1.3 )
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1
uppercase = true

[node name="Pregunta" type="Label" parent="player"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -390.982
margin_top = -626.953
margin_right = 194.018
margin_bottom = -332.953
rect_scale = Vector2( 1.3, 1.3 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
valign = 1
autowrap = true
uppercase = true
max_lines_visible = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="player"]
position = Vector2( -77.7582, -452.226 )
stream = ExtResource( 4 )
autoplay = true

[node name="Camera2D" type="Camera2D" parent="player"]
current = true
zoom = Vector2( 1.3, 1.3 )
limit_left = 0
limit_bottom = -25
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="fondo" type="Sprite" parent="player"]

[node name="Fade" type="Node" parent="player"]

[node name="fade" type="Sprite" parent="player/Fade"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 682.415, -654.201 )
scale = Vector2( 2.20748, 7.01216 )
texture = ExtResource( 5 )

[node name="sun" type="Light2D" parent="player"]
position = Vector2( -37.7551, -943.874 )
scale = Vector2( 15, 15 )
texture = ExtResource( 21 )
energy = 1.3
mode = 2

[node name="npc1" type="Area2D" parent="."]
position = Vector2( 2897.43, -229.807 )
scale = Vector2( 0.976313, 1.06435 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="npc1"]
position = Vector2( 36.8384, -98.797 )
scale = Vector2( 5, 5 )
z_index = -5
texture = ExtResource( 7 )
flip_h = true

[node name="burbuja" type="Sprite" parent="npc1"]
position = Vector2( 20.4072, -342.063 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="iniciar charla" type="CollisionShape2D" parent="npc1"]
position = Vector2( -99.3828, -84.7771 )
scale = Vector2( 0.5, 6.92693 )
shape = SubResource( 9 )

[node name="npc2" type="Area2D" parent="."]
position = Vector2( 7047.76, -221.818 )
scale = Vector2( 0.976313, 1.06435 )
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="iniciar charla" type="CollisionShape2D" parent="npc2"]
position = Vector2( 325.161, -62.2688 )
scale = Vector2( 0.5, 6.92693 )
shape = SubResource( 9 )

[node name="Sprite" type="Sprite" parent="npc2"]
position = Vector2( 335.678, -106.042 )
scale = Vector2( 4, 3.5 )
z_index = -5
texture = ExtResource( 10 )
hframes = 2
frame = 1

[node name="burbuja" type="Sprite" parent="npc2"]
position = Vector2( 338.083, -370.465 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="npc3" type="Area2D" parent="."]
position = Vector2( 13414.2, -314.509 )
scale = Vector2( 0.976313, 1.06435 )
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="iniciar charla" type="CollisionShape2D" parent="npc3"]
position = Vector2( 61.9355, -20.7117 )
scale = Vector2( 0.5, 7 )
shape = SubResource( 9 )

[node name="Sprite" type="Sprite" parent="npc3"]
position = Vector2( 276.132, -162.72 )
scale = Vector2( 8, 8 )
z_index = -5
texture = ExtResource( 12 )

[node name="burbuja" type="Sprite" parent="npc3"]
position = Vector2( 343.839, -480.544 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="npc4" type="Area2D" parent="."]
position = Vector2( 17517.9, -139.711 )
scale = Vector2( 0.976313, 1.06435 )
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="iniciar charla" type="CollisionShape2D" parent="npc4"]
position = Vector2( -77.418, -28.4403 )
scale = Vector2( 0.5, 7 )
shape = SubResource( 9 )

[node name="Sprite" type="Sprite" parent="npc4"]
position = Vector2( 62.8281, -152.41 )
scale = Vector2( 4, 4 )
z_index = -5
texture = ExtResource( 14 )
flip_h = true

[node name="burbuja" type="Sprite" parent="npc4"]
position = Vector2( 66.3008, -442.537 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="npc5" type="Area2D" parent="."]
position = Vector2( 21415.5, -139.363 )
scale = Vector2( 0.976313, 1.06435 )
script = ExtResource( 15 )
__meta__ = {
"_edit_group_": true
}

[node name="iniciar charla" type="CollisionShape2D" parent="npc5"]
position = Vector2( -108.918, -129.286 )
scale = Vector2( 0.5, 7 )
shape = SubResource( 9 )

[node name="Sprite" type="Sprite" parent="npc5"]
position = Vector2( 5.41602, -173.309 )
scale = Vector2( 4, 4 )
z_index = -5
texture = ExtResource( 16 )
flip_h = true

[node name="burbuja" type="Sprite" parent="npc5"]
position = Vector2( -20.8457, -488.1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="FinCasa" type="Area2D" parent="."]
position = Vector2( 23192.8, -262.262 )
scale = Vector2( 0.976313, 1.06435 )
script = ExtResource( 17 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="FinCasa"]
visible = false
position = Vector2( -80.5154, -39.7713 )
scale = Vector2( 1.02426, 0.93954 )
z_index = -5

[node name="se repite" type="Sprite" parent="FinCasa/Sprite"]
position = Vector2( -22752.6, -246.912 )
texture = ExtResource( 18 )

[node name="se repite2" type="Sprite" parent="FinCasa/Sprite"]
position = Vector2( -21737.4, -742.236 )
texture = ExtResource( 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FinCasa"]
position = Vector2( -237.235, -52.7469 )
scale = Vector2( 1.02426, 0.93954 )
shape = SubResource( 10 )

[node name="admi" type="Sprite" parent="FinCasa"]
position = Vector2( -241.039, -387.083 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="Inicio" type="Node2D" parent="."]
position = Vector2( 555.702, -151.504 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( -84.0946, 218.646 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 84.0946, -218.646 )
polygon = PoolVector2Array( 19.1967, -815.674, -7.35962, -111.933, 110.695, -150.252, 940.526, -124.865, 1158.8, -134.797, 1619.88, -198.574, 1821.87, -211.874, 2118.59, -201.058, 2592.4, -170.373, 2930.71, -153.389, 3161.45, -133.975, 3378.56, -147.837, 3725.03, -148.713, 4003.62, -167.983, 4173.58, -159.543, 4240.31, -162, 4383.5, -154.84, 4561.07, -137.656, 4730.97, -151.261, 4845.08, -171.827, 4941.94, -181.778, 5058.04, -180.452, 5241.81, -148.607, 5446.77, -160.323, 5714.55, -176.075, 5911.3, -181.803, 6097.3, -200.565, 6474.06, -195.287, 6538.01, -183.573, 6888.49, -141.838, 7316.89, -129.145, 8119.31, -130.554, 8614.62, -94.2012, 8944.07, -146.459, 9420.12, -222.093, 9841.54, -212.349, 10387.3, -252.905, 11282.8, -286.8, 11692.5, -357.895, 12178.1, -459.554, 12799, -375.959, 13338.6, -223.47, 14219.8, -228.253, 14916.9, -260.361, 15885.2, -262.334, 16648.7, -169.179, 17416.6, -116.922, 18516.2, -211.455, 19622.8, -157.819, 20715.7, -144.187, 21211.8, -151.681, 21449.5, -126.01, 23025.4, -199.588, 23028.1, -938.948, 24396.1, 1.02502, -239.432, -29.7536 )

[node name="3secTimer1" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 44

[node name="left" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 23.2949, 633.624 )
scale = Vector2( 1.84091, 1.80266 )
normal = ExtResource( 43 )
pressed = ExtResource( 43 )
action = "ui_left"
visibility_mode = 1

[node name="up" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 486.34, 604.963 )
scale = Vector2( 0.420123, 0.346741 )
normal = ExtResource( 44 )
pressed = ExtResource( 44 )
action = "ui_up"
visibility_mode = 1

[node name="right" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 783.732, 633.623 )
scale = Vector2( 1.84091, 1.80266 )
normal = ExtResource( 45 )
pressed = ExtResource( 45 )
action = "ui_right"
visibility_mode = 1

[node name="DayLabel" type="RichTextLabel" parent="CanvasLayer"]
margin_right = 39.0
margin_bottom = 15.0
rect_scale = Vector2( 5, 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "DAY 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cavas_day_nigth" type="CanvasModulate" parent="."]
scale = Vector2( 30, 30 )
color = Color( 0.956863, 0.898039, 0.898039, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 11 )

[node name="background" parent="." instance=ExtResource( 19 )]
position = Vector2( 12, 0 )
[connection signal="body_entered" from="npc1" to="player" method="_on_npc1_body_entered"]
[connection signal="timeout" from="3secTimer1" to="player" method="_on_3secTimer1_timeout"]
[connection signal="pressed" from="CanvasLayer/left" to="player" method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="CanvasLayer/up" to="player" method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="CanvasLayer/right" to="player" method="_on_TouchScreenButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="FinCasa" method="_on_AnimationPlayer_animation_finished"]
